fix: remove null

--- a/data_preprocessing/per_move_sample.ipynb
+++ b/data_preprocessing/per_move_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "cc6e0f80",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "feb60efd",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "└─────┴──────────┴──────────┴───────────┴───┴────────┴─────────┴────────────┴────────────┘"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "id": "44b03153",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "└─────┴──────────┴──────────┴───────────┴───┴────────┴─────────┴────────────┴────────────┘"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "id": "c51ee3f7",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "└─────┴──────────┴──────────┴───────────┴───┴────────┴────────┴────────┴────────┘"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "id": "7b398070",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "└─────┴──────────┴──────────┴───────────┴───┴────────┴────────┴────────┴────────┘"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,29 +196,60 @@
     "df_sampled = (\n",
     "    df.group_by(\"id\")\n",
     "      .agg(pl.all().exclude(\"id\").sample(fraction=fraction, seed=seed))\n",
+    "      .filter(pl.col(\"move_idx\").list.len() > 0)\n",
     "      .explode(pl.all().exclude(\"id\"))\n",
-    ").sort(\"id\", \"move_idx\")\n",
+    ").sort(\"id\", \"move_idx\").collect()\n",
     "\n",
-    "df_sampled.head().collect()"
+    "df_sampled.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
+   "id": "711b50c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1, 70)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>move_idx</th><th>move_uci</th><th>white_elo</th><th>black_elo</th><th>avg_elo</th><th>tile00</th><th>tile01</th><th>tile02</th><th>tile03</th><th>tile04</th><th>tile05</th><th>tile06</th><th>tile07</th><th>tile10</th><th>tile11</th><th>tile12</th><th>tile13</th><th>tile14</th><th>tile15</th><th>tile16</th><th>tile17</th><th>tile20</th><th>tile21</th><th>tile22</th><th>tile23</th><th>tile24</th><th>tile25</th><th>tile26</th><th>tile27</th><th>tile30</th><th>tile31</th><th>tile32</th><th>tile33</th><th>tile34</th><th>tile35</th><th>tile36</th><th>tile37</th><th>tile40</th><th>tile41</th><th>tile42</th><th>tile43</th><th>tile44</th><th>tile45</th><th>tile46</th><th>tile47</th><th>tile50</th><th>tile51</th><th>tile52</th><th>tile53</th><th>tile54</th><th>tile55</th><th>tile56</th><th>tile57</th><th>tile60</th><th>tile61</th><th>tile62</th><th>tile63</th><th>tile64</th><th>tile65</th><th>tile66</th><th>tile67</th><th>tile70</th><th>tile71</th><th>tile72</th><th>tile73</th><th>tile74</th><th>tile75</th><th>tile76</th><th>tile77</th></tr><tr><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td></tr></thead><tbody><tr><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1, 70)\n",
+       "┌─────┬──────────┬──────────┬───────────┬───┬────────┬────────┬────────┬────────┐\n",
+       "│ id  ┆ move_idx ┆ move_uci ┆ white_elo ┆ … ┆ tile74 ┆ tile75 ┆ tile76 ┆ tile77 │\n",
+       "│ --- ┆ ---      ┆ ---      ┆ ---       ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │\n",
+       "│ u32 ┆ u32      ┆ u32      ┆ u32       ┆   ┆ u32    ┆ u32    ┆ u32    ┆ u32    │\n",
+       "╞═════╪══════════╪══════════╪═══════════╪═══╪════════╪════════╪════════╪════════╡\n",
+       "│ 0   ┆ 0        ┆ 0        ┆ 0         ┆ … ┆ 0      ┆ 0      ┆ 0      ┆ 0      │\n",
+       "└─────┴──────────┴──────────┴───────────┴───┴────────┴────────┴────────┴────────┘"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sampled.null_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "b9eeddf5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sampled.collect().write_parquet(\"output/per_move_sampled.parquet\")"
+    "df_sampled.write_parquet(\"output/per_move_sampled.parquet\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e767a45e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
